# msme-scorer-rag

./: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  railway.toml  requirements.txt  start.bat  start.sh
backend/: Dockerfile  LIGHTRAG_RERANK_README.md  app.py  debug_citations.py  debug_lightrag.py  debug_rag.py  debug_start.py  ingest.py  lightrag_utils.py  main.py  nixpacks.toml  package.json  pyproject.toml  rag_store.py  railway.json  railway.toml  requirements.txt  rerank_func.py  rule_engine.py  start.sh  start_debug.sh  test_api.py  test_api_response.py  test_citations.py  test_lightrag_rerank.py  test_rerank_edge_cases.py  update_kv_store.py  verify_metadata.py  wsgi.py
backend/rag-pdf/: graph_chunk_entity_relation.graphml  ingestion_metadata.json  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  railway.json  tailwind.config.js  test-citation-logic.js  test-citations.html  test-citations.js
frontend/.next/: trace
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/app/: globals.css  layout.tsx
frontend/components/: chat-interface.tsx  loan-form.tsx
frontend/components/layout/: main-layout.tsx
frontend/components/ui/: badge.tsx  button.tsx  select.tsx  slider.tsx
frontend/lib/: api.ts  utils.ts
(+43 files in other folders)
