[project]
name = "msme-loan-scorer-backend"
version = "0.1.0"
description = "MSME Loan Scorer Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "lightrag[api]>=0.1.0b6",
    "openai>=1.3.0",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.6",
    "requests>=2.32.0",
    "aiofiles>=23.2.0",
    "loguru>=0.7.0",
    "backoff>=2.2.0",
    "jsonlines>=4.0.0",
    "nest-asyncio>=1.6.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.67.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
